force-app/main/default/objects/LLC_BI__Covenant2__c/fields/ffin_Description__c.field-meta.xml
<CustomField>
    <fullName>ffin_Description__c</fullName>
    <description>Formula field referencing Covenant Types Description</description>
    <formula>LLC_BI__Covenant_Type__r.ffin_Description__c</formula>
    <inlineHelpText>The Description of the Covenant Type described by First Financial</inlineHelpText>
    <label>Description</label>
    <type>Text</type>
</CustomField>