force-app/main/default/objects/LLC_BI__Covenant2__c/fields/LLC_BI__Comments__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Comments__c</fullName>
    <description>Use this optional comments field to add any notes or instructions about the performance rules.</description>
    <label>Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>