force-app/main/default/objects/LLC_BI__Covenant2__c/fields/LLC_BI__Compliance_Days_Prior__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Compliance_Days_Prior__c</fullName>
    <description>This field is required and manually populated. This field should be set to the number of days prior to the (Covenant&apos;s) next evaluation date that a compliance record will be created.</description>
    <inlineHelpText>This field is required and populated based on the Frequency. This field sets the number of days prior to the Covenant&apos;s next evaluation date that a compliance record will be created.</inlineHelpText>
    <label>Compliance Days Prior</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>LLC_BI__Frequency__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>14</fullName>
            </value>
            <value>
                <fullName>30</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>