force-app/main/default/objects/LLC_BI__Covenant2__c/fields/LLC_BI__Covenant_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Covenant_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Covenant Type</description>
    <inlineHelpText>Lookup to the Covenant Type</inlineHelpText>
    <label>Covenant Type</label>
    <referenceTo>LLC_BI__Covenant_Type__c</referenceTo>
    <relationshipName>Covenant2</relationshipName>
    <type>Lookup</type>
</CustomField>