force-app/main/default/objects/LLC_BI__Covenant2__c/fields/LLC_BI__Days_Until_Next_Evaluation__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Days_Until_Next_Evaluation__c</fullName>
    <description>This field is automatically calculated. Number of days until the Next Evaluation Date. If Today is not before the next evaluation date, then this returns 0.</description>
    <formula>IF( ISNULL(LLC_BI__Next_Evaluation_Date__c) || (LLC_BI__Next_Evaluation_Date__c - Today() &lt; 0) , Null, (LLC_BI__Next_Evaluation_Date__c - Today()))</formula>
    <inlineHelpText>Number of days until the Next Evaluation Date.</inlineHelpText>
    <label>Days Until Next Evaluation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>