force-app/main/default/objects/LLC_BI__Covenant2__c/fields/LLC_BI__Detail__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Detail__c</fullName>
    <description>This field is optional and manually populated. Use this field to add details to the covenant.</description>
    <inlineHelpText>Use this field to add details to the covenant.</inlineHelpText>
    <label>Detail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>