force-app/main/default/objects/LLC_BI__Covenant2__c/fields/LLC_BI__Due_Date__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Due_Date__c</fullName>
    <description>The system automatically populates this optional field with the covenant&apos;s original, non modified due date. Editing is not recommended unless extension applies permanently. By default, it is blank.</description>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>