force-app/main/default/objects/LLC_BI__Covenant2__c/fields/LLC_BI__Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Effective_Date__c</fullName>
    <description>This field is optional and is manually poulated. It identifies the statement date of a covenant&apos;s financial statement.</description>
    <inlineHelpText>Effective Date is the Date of the Statement</inlineHelpText>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>