force-app/main/default/objects/LLC_BI__Covenant2__c/fields/LLC_BI__Frequency__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Frequency__c</fullName>
    <description>This field is required and manually populated. This indicates how often the Covenant is required.</description>
    <label>Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Annually</fullName>
            </value>
            <value>
                <fullName>Semi-Annually</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Every 2 Months</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>