force-app/main/default/objects/LLC_BI__Covenant2__c/fields/LLC_BI__Is_Template__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Is_Template__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field defaults to false and is manually populated. This determines if a covenant is going to be used as a template.</description>
    <label>Is_Template</label>
    <type>Checkbox</type>
</CustomField>