force-app/main/default/objects/LLC_BI__Covenant2__c/fields/LLC_BI__Linked_Spread_Statement_Record_Total__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Linked_Spread_Statement_Record_Total__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is required and manually populated. The Spread Statement Record Total (group) this Financial Indicator Covenant is referencing for compliance.</description>
    <inlineHelpText>The Spread Statement Record Total (group) this Financial Indicator Covenant is referencing for compliance.</inlineHelpText>
    <label>Linked Spread Statement Record Total</label>
    <referenceTo>LLC_BI__Spread_Statement_Record_Total__c</referenceTo>
    <relationshipLabel>Covenant Mgmt</relationshipLabel>
    <relationshipName>Covenant_Mgmt</relationshipName>
    <type>Lookup</type>
</CustomField>