force-app/main/default/objects/LLC_BI__Covenant2__c/fields/LLC_BI__Related_Covenant__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Related_Covenant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field allows covenants to be related to each other.</description>
    <inlineHelpText>This field is used to relate Financial Indicator covenants to Financial Statement Requirements covenants.  When a Financial Statement Requirement covenant goes into exception all of its related FI covenants are also set to Exception.</inlineHelpText>
    <label>Related Covenant</label>
    <referenceTo>LLC_BI__Covenant2__c</referenceTo>
    <relationshipLabel>Covenant Mgmt</relationshipLabel>
    <relationshipName>Covenant_Mgmt</relationshipName>
    <type>Lookup</type>
</CustomField>