force-app/main/default/objects/LLC_BI__Covenant2__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup field to Region object</description>
    <label>Region</label>
    <referenceTo>Region__c</referenceTo>
    <relationshipLabel>Covenant Mgmt</relationshipLabel>
    <relationshipName>Covenant_Mgmt</relationshipName>
    <type>Lookup</type>
</CustomField>